--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "setup": "node ./bin/setup.js",
+    "fast-setup": "NODE_ENV=test node ./bin/setup.js",
+    "routes-signup": "node ./bin/signup-app.js",
+    "docker-start": "npm run fast-setup && npm run routes-signup && npm start"
   },
   "dependencies": {
+    "async": "*",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-fileupload": "0.0.5",
-    "request": "*",
     "jade": "~1.11.0",
     "mongodb": "*",
     "monk": "*",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-	"async":"*"
+    "request": "*",
+    "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "handlebars": "*",
+    "promptly": "*"
   }
 }
