--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-fileupload": "0.0.5",
+    "express-session": "*",
     "jade": "~1.11.0",
     "mongodb": "*",
     "monk": "*",
