--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "express": "~4.14.0",
     "express-fileupload": "0.0.5",
     "express-session": "*",
+    "html-pdf" : "*",
     "jade": "~1.11.0",
     "mongodb": "*",
     "monk": "*",
     "morgan": "~1.7.0",
+    "officegen": "*",
     "request": "*",
     "serve-favicon": "~2.3.0"
   },
